fix weird saved processed fille bug when failed or stuck processing

--- a/inferno-comics-web/src/app/components/common/sync-status-icon/sync-status-icon.component.scss
+++ b/inferno-comics-web/src/app/components/common/sync-status-icon/sync-status-icon.component.scss
@@ -220,6 +220,7 @@
   text-transform: uppercase;
   letter-spacing: 0.3px;
   flex-shrink: 0;
+  color: #000;
 }
 
 .item-progress {
